Frontend Udacity JS Finalizado

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 						<h4 class="subtitulo">Cognits Training</h4>
 						<div class="information" id="information"></div>
 						<br/>
-						<h4 class="subtitulo">Experience Cognits</h4>
+						<h4 class="subtitulo">Cognits Experience</h4>
 						<div class="secondInfo" id="secondInfo"></div>
 						<br>
 					</div>	
